--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
         <header>
             <nav>
+                <h1>Links de interés</h1>
                 <ul>
                     <li><a href="#top" title="Inicio">Inicio</a></li>
                     <li><a href="https://www.instagram.com/javierzavello/" title="Mi Instagram">Mi Instagram</a></li>
