--- a/index.html
+++ b/index.html
@@ -6,25 +6,34 @@
 	</head>
 	<body>
         <header>
+            <h1>Links de Navegación</h1>
             <nav>
-                <h1>Links de interés</h1>
                 <ul>
                     <li><a href="#top" title="Inicio">Inicio</a></li>
+                    <li><a href="#quien-soy" title="¿Quién soy?">¿Quién soy?</a></li>
+                    <li><a href="#ramos" title="Mis Ramos">Mis Ramos</a></li>
+                    <li><a href="#background" title="Mi Fondo de Pantalla">Mi Fondo de Pantalla</a></li>
                     <li><a href="https://www.instagram.com/javierzavello/" title="Mi Instagram">Mi Instagram</a></li>
                     <li><a href="https://www.google.com/" title="Google">Google</a></li>
                 </ul>
             </nav>
         </header>
-        <div>
+        <hr>
+        <div id="foto">
             <img src="foto.jpg" alt="Foto Javier Zepeda Avello" width=300/>
+            <p><em><a href="#top">Volver arriba</a></em></p>
         </div>
-        <div>
+        <hr>
+        <div id="quien-soy">
             <h1>¿Quién soy?</h1>
             <h2>Javier Zepeda Avello</h2>
             <p>Hola, soy estudiante de Ingeniería en la Pontificia Universidad Católica de Chile.
                 Esta es una página para la <a href="https://cursos.canvas.uc.cl/courses/18664">Ayudantía 3</a> de Pensamiento Visual.</p>
+            
+            <em><a href="#top">Volver arriba</a></em>
         </div>
-        <div>
+        <hr>
+        <div id="ramos">
             <h1>Mis Ramos</h1>
             <ul>
                 <li>Pensamiento Visual</li>
@@ -33,11 +42,13 @@
                 <li>Electricidad y Magnetismo</li>
                 <li>Los Fundamentos de las Consecuencias Morales de la Fe Cristiana</li>
             </ul>
+            <em><a href="#top">Volver arriba</a></em>
         </div>
-        <div>
+        <hr>
+        <div id="background">
             <h1>Mi fondo de pantalla</h1>
             <img src="background.jpg">
-            <a href="#top">Volver arriba</a>
+            <em><a href="#top">Volver arriba</a></em>
         </div>
 	</body>
 <html>
