--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             <h1>Links de Navegación</h1>
             <nav>
                 <ul>
-                    <li><a href="#top" title="Inicio">Inicio</a></li>
+                    <li><a href="#" title="Inicio">Inicio</a></li>
                     <li><a href="#quien-soy" title="¿Quién soy?">¿Quién soy?</a></li>
                     <li><a href="#ramos" title="Mis Ramos">Mis Ramos</a></li>
                     <li><a href="#background" title="Mi Fondo de Pantalla">Mi Fondo de Pantalla</a></li>
-                    <li><a href="https://www.instagram.com/javierzavello/" title="Mi Instagram">Mi Instagram</a></li>
-                    <li><a href="https://www.google.com/" title="Google">Google</a></li>
+                    <li><a href="https://www.instagram.com/javierzavello/" title="Mi Instagram" target="_blank">Mi Instagram</a></li>
+                    <li><a href="https://www.google.com/" title="Google" target="_blank">Google</a></li>
                 </ul>
             </nav>
         </header>
