--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+        <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
 		<title>Ayudantía 3 – PV</title>
 	</head>
 	<body>
