--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <li><a href="#ramos" title="Mis Ramos">Mis Ramos</a></li>
                     <li><a href="#background" title="Mi Fondo de Pantalla">Mi Fondo de Pantalla</a></li>
                     <li><a href="https://www.instagram.com/javierzavello/" title="Mi Instagram" target="_blank">Mi Instagram</a></li>
-                    <li><a href="https://www.google.com/" title="Google" target="_blank">Google</a></li>
+                    <li><a href="https://www.google.com/#" title="Google" target="_blank">Google</a></li>
                 </ul>
             </nav>
         </header>
