agregado footer y detalles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Ayudantía 3 – PV</title>
 	</head>
 	<body>
-        <header>
+        <header id="cabecera">
             <h1>Links de Navegación</h1>
             <nav>
                 <ul>
@@ -24,7 +24,6 @@
             <img src="foto.jpg" alt="Foto Javier Zepeda Avello" width=300/>
             <p><em><a href="#top">Volver arriba</a></em></p>
         </div>
-        <hr>
         <div id="quien-soy">
             <h1>¿Quién soy?</h1>
             <h2>Javier Zepeda Avello</h2>
@@ -51,5 +50,8 @@
             <img src="background.jpg">
             <em><a href="#top">Volver arriba</a></em>
         </div>
-	</body>
+        <footer>
+            <p>Holi</p>
+        </footer>
+    </body>
 <html>
