--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <em><a href="#top">Volver arriba</a></em>
         </div>
         <div id="background" class="contenido">
-            <h1>Mi fondo de pantalla</h1>
+            <h1 id="bg_title">Mi fondo de pantalla</h1>
             <button id="img_button"><a>Ver/ocultar imagen</a></button>
             <img id="imagen_fondo" src="background.jpg">
             <em><a href="#top">Volver arriba</a></em>
