--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
         <script type="text/javascript" src="jquery-3.5.1.js"></script>
         <script type="text/javascript" src="jscode.js"></script>
-		<title>Mi sitio web – PV</title>
+	<title>Mi sitio web – PV</title>
+	<meta name="robots" content="noindex">
 	</head>
 	<body>
         <header id="cabecera">
